<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CST2335Labs</string>
    <string name="Username">Username</string>
    <string name="EnterYourUsername">Enter Your Username</string>
    <string name="Email">Email</string>
    <string name="emailTextID">Enter Your email       </string>
    <string name="YourPicture">Your Picture</string>
    <string name="ClickButton">Click the button above to take the picture</string>

    <string name="EnterEmail">Enter your email address</string>
    <string name="email">Type Your Email here</string>

    <string name="TypePassword">Type Password here</string>
    <string name="button">Login</string>

    <string name="clickAboveText">Click to chat</string>

    <string name="goToChatButton">Click to chat</string>

    <string name="YourProfile">Your Profile</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="typehint">Type here</string>
</resources>
