<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/YourProfile"
        android:text="@string/YourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/Username"
        android:text="@string/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/yourNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterYourUsername"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/emailTextID"
        android:text="@string/emailTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/yourEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/yourPictureText"
        android:text="@string/YourPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/picButton"
        android:src="@android:drawable/picture_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:id="@+id/clickAboveText"
        android:text="@string/clickAboveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/goToChatButton"
        android:text="@string/goToChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />


</LinearLayout>